--- a/data/vars.pug
+++ b/data/vars.pug
@@ -1,18 +1,36 @@
 -
 	link = [
 		{
-			"name": "Главная"
+			"name": "Главная",
+			"link": "#"
 		},
 		{
-			"name": "Об авторе"
+			"name": "Продукция",
+			"link": "#"
 		},
 		{
-			"name": "Работы"
+			"name": "О нас",
+			"link": "#"
 		},
 		{
-			"name": "Процесс"
-		}, 
+			"name": "Контакты",
+			"link": "#"
+		}
+	]
+	card =[
 		{
-			"name": "Контакты"
+			"title": "Широкий ассортимент",
+			"text": "У нас есть отработанные решения по подбору фильтрующих материалов и корпусов",
+			"img": "12.jpg"
+		},
+		{
+			"title": "Более 20 лет на рынке",
+			"text": "Мы предложим лучшие решения для фильтрации, адаптированные к конкретным требованям",
+			"img": "13.jpg"
+		},
+		{
+			"title": "Склад и офис в Санкт-Петербурге",
+			"text": "Правильно отработанная и выстроенная логистика, быстрые поставки заказов нашим клиентам",
+			"img": "14.jpg"
 		}
 	]
