--- a/src/pug/layout/app.pug
+++ b/src/pug/layout/app.pug
@@ -9,6 +9,8 @@ html(lang="ru")
         
         title= title
     body
+        include ../../../data/vars
+        include ../chunk/mixins
         include ../chunk/header 
         block page
     block scripts 
