--- a/data/vars.pug
+++ b/data/vars.pug
@@ -34,3 +34,47 @@
 			"img": "14.jpg"
 		}
 	]
+	geo = [
+		{
+			"colour": "#9C73CC",
+			"country": "Швеции",
+			"store": "Skandinaviska IFAB Filtrering AB",
+			"link": "www.Ifab.se"
+		},
+		{
+			"colour": "#A6C36F",
+			"country": "Польше",
+			"store": "3A filters Poland",
+			"link": "www.3afilter.eu/"
+		},
+		{
+			"colour": "#E9BC19",
+			"country": "Италии",
+			"store": "SPADONI",
+			"link": "www.spadoni.it"
+		},
+		{
+			"colour": "#F87933",
+			"country": "Японии",
+			"store": "ROKI TECHNO",
+			"link": "https://www.rokitechno.co.jp"
+		},
+		{
+			"colour": "#54B5C9",
+			"country": "России",
+			"store": "офис и склад в Санкт-Петербурге",
+			"link": "http://www.ifab.spb.ru/ "
+		},
+		{
+			"colour": "#DD3E5A",
+			"country": "Беларуси",
+			"store": "офис в Минске",
+			"link": ""
+		},
+		{
+			"colour": "#3153CB",
+			"country": "Латвии",
+			"store": "офис в Риге",
+			"link": ""
+		}
+	]
