--- a/data/vars.pug
+++ b/data/vars.pug
@@ -78,3 +78,7 @@
 			"link": ""
 		}
 	]
+	
+	companies = [
+		"logo1.png","logo2.png","logo3.png","logo4.png","logo5.png","logo6.png","logo7.png","logo8.png","logo9.png","logo10.png","logo11.png","logo12.png"
+	]
