--- a/src/pug/chunk/mixins.pug
+++ b/src/pug/chunk/mixins.pug
@@ -18,4 +18,14 @@ mixin geo(colour,country,store,link="")
         p.geo-countries__text= "в " + country + " - " + store + " "
             if (link != "") 
                 a(href= link, target="_blank").geo-countries__link= "(" + link + ")"
+mixin companies(img)
+    li.companies__item 
+        img(src="/img/companies/"+img, alt=img).companies__img
+mixin catalog(name,img,link="")
+    li.catalog-cell
+        img(src="/img/catalog/"+img , alt=img)
+        .catalog-cell__inner 
+            p.catalog-cell__name= name 
+            a(href=link).catalog-cell__link 
+
 
