--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -24,7 +24,18 @@ block page
                     ul.geo-countries__list
                         each item in geo
                             +geo(item.colour,item.country,item.store,item.link)
-
+    section.companies
+        .container 
+            .companies__title.title Нам доверяют
+            ul.companies__list
+                each item in companies
+                    +companies(item)
+    section.catalog 
+        .container 
+            .catalog__title.title Каталог решений для Вашего производства
+            ul.catalog__list 
+                
+            a(href="").catalog__link
 
                     
 
