catalog + consult start

--- a/data/vars.pug
+++ b/data/vars.pug
@@ -82,3 +82,26 @@
 	companies = [
 		"logo1.png","logo2.png","logo3.png","logo4.png","logo5.png","logo6.png","logo7.png","logo8.png","logo9.png","logo10.png","logo11.png","logo12.png"
 	]
+
+	catalog = [
+		{
+			"name": "Рукавные фильтры",
+			"img": "1.png"
+		},
+		{
+			"name": "Фильтр-картриджи",
+			"img": "2.png"
+		},
+		{
+			"name": "Корпусы",
+			"img": "3.png"
+		},
+		{
+			"name": "Фильтрующие картоны",
+			"img": "4.png"
+		},
+		{
+			"name": "Адсорбенты",
+			"img": "5.png"
+		}
+	]
