--- a/src/pug/layout/app.pug
+++ b/src/pug/layout/app.pug
@@ -6,7 +6,7 @@ html(lang="ru")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", href="css/main.min.css")
-        
+        block link
         title= title
     body
         include ../../../data/vars
