--- a/data/vars.pug
+++ b/data/vars.pug
@@ -105,3 +105,30 @@
 			"img": "5.png"
 		}
 	]
+
+	consult = [
+		{
+			"title": "Пищевая промышленность",
+			"img": "1.png"
+		},
+		{
+			"title": "Электронная промышленность",
+			"img": "2.png"
+		},
+		{
+			"title": "Косметическая промышленность",
+			"img": "3.png"
+		},
+		{
+			"title": "Химическая промышленность",
+			"img": "4.png"
+		},
+		{
+			"title": "Автомобилестроение",
+			"img": "5.png"
+		},
+		{
+			"title": "Фармацевтическая промышленность",
+			"img": "6.png"
+		},
+	]
