--- a/src/pug/chunk/form.pug
+++ b/src/pug/chunk/form.pug
@@ -1,8 +1,10 @@
 form.form(action="#")
-    input(type="text", placeholder="Компания", name="company").form__text 
-    input(type="text", placeholder="Номер телефона", name="tel").form__text 
-    input(type="email", placeholder="E-mail", name="email").form__text 
-    input(type="text", placeholder="Опишите ваш запрос", name="desc").form__text
-    input(type="submit", value="Отправить запрос")
-p.consult__warning Нажимая на кнопку, вы даете 
-    a(href="#", target="_blank").consult__link согласие на обработку персональных данных
+    input(type="text", placeholder="Компания", name="company", required).form__text 
+    input(type="text", placeholder="Номер телефона", name="tel",required).form__text 
+    input(type="email", placeholder="E-mail", name="email",required).form__text 
+    //- input(type="text", placeholder="Опишите ваш запрос", name="desc").form__text
+    textarea(name="desc", placeholder="Опишите ваш запрос",required).form__text.form__textarea Опишите ваш запрос
+    .form__inner
+        input(type="submit", value="Отправить запрос").form__submit
+    p.form__warning Нажимая на кнопку, вы даете 
+        a(href="#", target="_blank").form__link согласие на обработку персональных данных
