footer + contacts start

--- a/data/vars.pug
+++ b/data/vars.pug
@@ -132,3 +132,23 @@
 			"img": "6.png"
 		},
 	]
+	contacts = [
+		{
+			"img": "address.svg",
+			"text": "г. Санкт-Петербург,  а/я 281 Ленинский пр., 151, оф.635"
+		},
+		{
+			"img": "tel.svg",
+			"text": "+7 812 375-99-69",
+			"href": "tel:88123759969"
+		},
+		{
+			"img": "mail.svg",
+			"text": "ifab@ifab.spb.ru",
+			"href":"mailto:ifab@ifab.spb.ru"
+		},
+		{
+			"img": "time.svg",
+			"text": "Пн-Пт: 9:00-20:00"
+		}
+	]
