--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -54,6 +54,18 @@ block page
                     h1.consult__title Мы имеем опыт решения задач, связанных с фильтрацией и очисткой продуктов и сред на разных производствах
                     p.consult__subtitle Оставьте данные для заказа или получения консультации
                     include chunk/form
+    section.contacts
+        .container 
+            .contacts-wrapper 
+                .map 
+                ul.contacts-list
+                    li.contacts-list__item 
+                        a(href="index.html").contacts-logo
+                            img(src="/img/header/logo.png", alt="Logo").contacts-logo__img
+                    each item in contacts  
+                        +contacts(item.img, item.text, item.href)
+                    
+                      
 
 
 block scripts 
