--- a/src/pug/layout/app.pug
+++ b/src/pug/layout/app.pug
@@ -14,5 +14,6 @@ html(lang="ru")
         include ../chunk/mixins
         include ../chunk/header 
         block page
+        include ../chunk/footer
     block scripts 
     script(src="js/main.js")
