--- a/src/sass/block/consult.scss
+++ b/src/sass/block/consult.scss
@@ -2,6 +2,7 @@
     &__wrapper {
         display: flex;
         justify-content: space-between;
+        margin-bottom: 160px;
     }
 
     &__title {
