--- a/src/pug/chunk/mixins.pug
+++ b/src/pug/chunk/mixins.pug
@@ -39,4 +39,13 @@ mixin slide(title,img)
             else 
                 h2.swiper-slide__title= title
 
+mixin contacts(img,text,href="")
+    li.contacts-list__item 
+        .contacts-list__inner 
+            img(src="img/contacts/"+img, alt=img).contacts-list__img
+        if (href == "")
+            p.contacts-list__text= text
+        else
+            a(href=href).contacts-list__text= text
+
 
