index without adaptive

--- a/data/vars.pug
+++ b/data/vars.pug
@@ -152,3 +152,69 @@
 			"text": "Пн-Пт: 9:00-20:00"
 		}
 	]
+	menu1 = [
+		{
+			"title": "Рукавные фильтры",
+			"href": "#",
+			"subtitle": [
+				{
+					"name": "Однослойные",
+					"href": "#"
+				},
+				{
+					"name": "Многослойные",
+					"href": "#"
+				},
+				{
+					"name": "С адсорбентом",
+					"href": "#"
+				},
+				{
+					"name": "Тонкая фильтрация",
+					"href": "#"
+				}
+			]
+		},
+		{
+			"title": "Филтры-картриджи",
+			"href": "#",
+			"subtitle": [
+				{
+					"name": "Поверхностная фильтрация",
+					"href": "#"
+				},
+				{
+					"name": "Глубинная фильтрация",
+					"href": "#"
+				},
+				{
+					"name": "Адсорбирующие",
+					"href": "#"
+				}
+			]
+		},
+			{
+			"title": "Корпусы",
+			"href": "#",
+			"subtitle": [
+				{
+					"name": "Корпусы для ЭПФ",
+					"href": "#"
+				},
+				{
+					"name": "Корпусы дял рукавных фильтров",
+					"href": "#"
+				}
+			]
+		},
+	]
+	menu2 =[
+		{
+			"title": "Фильтрующие картоны",
+			"href": "#",
+		},
+		{
+			"title": "Адсорбенты",
+			"href": "#",
+		}
+	]
