--- a/src/pug/chunk/header.pug
+++ b/src/pug/chunk/header.pug
@@ -7,3 +7,5 @@ header.header
                 ul.header-nav
                     each item in link
                         +nav(item.name, item.link)
+        .header__back
+        include menu
