--- a/src/pug/chunk/mixins.pug
+++ b/src/pug/chunk/mixins.pug
@@ -1,8 +1,14 @@
 mixin nav(name,link)
-    li.header-nav__item
-        a(href= link).header-nav__link= name
-        if name == "Продукция"
-            button(type="button").header-nav__btn
+    if (name == navname)
+        li.header-nav__item.header-nav__item--active
+            a(href= link).header-nav__link= name
+            if name == "Продукция"
+                button(type="button").header-nav__btn
+    else
+        li.header-nav__item 
+            a(href= link).header-nav__link= name
+            if name == "Продукция"
+                button(type="button").header-nav__btn
 
 mixin card(title,text,img)
     li(style="background-image: url(../img/info/" + img + ");").info-card__item
@@ -47,5 +53,21 @@ mixin contacts(img,text,href="")
                 p.contacts-list__text= text
             else
                 a(href=href).contacts-list__text= text
+mixin sublist(name, href)
+    li.menu-sublist__item 
+        a(href=href).menu-sublist__link= name
+
+mixin menu(title, href, subtitle)
+    li.menu__item
+        a(href=href).menu__link= title 
+            if (subtitle)
+                ul.menu-sublist
+                    each item in subtitle
+                        +sublist(item.name,item.href)
+            //- if ((title == "Фильтрующие картоны") && (title == "Адсорбенты"))
+
+            
+                
+
 
 
