--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -2,6 +2,7 @@ extends layout/app
 
 block vars 
     - let title = 'Main';
+    - let navname = "Главная";
 
 block link
     link(rel="stylesheet",href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css")
