--- a/data/vars.pug
+++ b/data/vars.pug
@@ -2,7 +2,7 @@
 	link = [
 		{
 			"name": "Главная",
-			"link": "#"
+			"link": "index.html"
 		},
 		{
 			"name": "Продукция",
@@ -10,7 +10,7 @@
 		},
 		{
 			"name": "О нас",
-			"link": "#"
+			"link": "about.html"
 		},
 		{
 			"name": "Контакты",
@@ -217,4 +217,12 @@
 			"title": "Адсорбенты",
 			"href": "#",
 		}
+	]
+	about =[
+		"автомобилестроение",
+		"косметической",
+		"пищевой",
+		"электронной",
+		"химической",
+		"фармацевтической"
 	]
