--- a/src/sass/block/form.scss
+++ b/src/sass/block/form.scss
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     row-gap: 15px;
-    max-width: 762px;
+    // max-width: 762px;
+    max-width: 962px;
     &__text{
         padding: 25px 37px 24px 37px;
         background-color: #FAFAFA;
