--- a/src/pug/chunk/form.pug
+++ b/src/pug/chunk/form.pug
@@ -1,9 +1,9 @@
-form.form(action="#")
+form.form(action="#", style="max-width: " + width +";" )
     input(type="text", placeholder="Компания", name="company", required).form__text 
     input(type="text", placeholder="Номер телефона", name="tel",required).form__text 
     input(type="email", placeholder="E-mail", name="email",required).form__text 
     //- input(type="text", placeholder="Опишите ваш запрос", name="desc").form__text
-    textarea(name="desc", placeholder="Опишите ваш запрос",required).form__text.form__textarea Опишите ваш запрос
+    textarea(name="desc", placeholder="Опишите ваш запрос",required, style="height:"+height+";").form__text.form__textarea Опишите ваш запрос
     .form__inner
         input(type="submit", value="Отправить запрос").form__submit
     p.form__warning Нажимая на кнопку, вы даете 
