--- a/src/sass/block/header.scss
+++ b/src/sass/block/header.scss
@@ -1,5 +1,6 @@
 .header{
     position: sticky;
+    top: 0;
     padding: 20px 0;
     z-index: 5;
     box-shadow: 0px -2px 15px rgba(0, 0, 0, 0.18);
