--- a/data/vars.pug
+++ b/data/vars.pug
@@ -6,7 +6,7 @@
 		},
 		{
 			"name": "Продукция",
-			"link": "#"
+			"link": "products.html"
 		},
 		{
 			"name": "О нас",
@@ -225,4 +225,86 @@
 		"электронной",
 		"химической",
 		"фармацевтической"
+	]
+	aside = [
+		{
+			"title": "Рукавные фильтры",
+			"href": "#",
+			"subtitle": [
+				{
+					"name": "Однослойные",
+					"href": "#"
+				},
+				{
+					"name": "Многослойные",
+					"href": "#"
+				},
+				{
+					"name": "С адсорбентом",
+					"href": "#"
+				},
+				{
+					"name": "Тонкая фильтрация",
+					"href": "#"
+				}
+			]
+		},
+	
+		{
+			"title": "Фильтры-картриджи",
+			"href": "#",
+			"subtitle": [
+				{
+					"name": "Поверхностная фильтрация",
+					"href": "#"
+				},
+				{
+					"name": "Глубинная фильтрация",
+					"href": "#"
+				},
+				{
+					"name": "Адсорбирующие",
+					"href": "#"
+				}
+			]
+		},
+	
+			{
+			"title": "Корпусы",
+			"href": "#",
+			"subtitle": [
+				{
+					"name": "Корпусы для ЭПФ",
+					"href": "#"
+				},
+				{
+					"name": "Корпусы дял рукавных фильтров",
+					"href": "#"
+				}
+			]
+		},
+	
+		{
+			"title": "Фильтрующие картоны",
+			"href": "#"
+		},
+	
+		{
+			"title": "Адсорбенты",
+			"href": "#",
+			"subtitle": [
+				{
+					"name": "Диатомит (Кизельгур)",
+					"href": "#"
+				},
+				{
+					"name": "Перлит",
+					"href": "#"
+				},
+				{
+					"name": "Уголь",
+					"href": "#"
+				}
+			]
+		}
 	]
