--- a/data/vars.pug
+++ b/data/vars.pug
@@ -202,7 +202,7 @@
 					"href": "#"
 				},
 				{
-					"name": "Корпусы дял рукавных фильтров",
+					"name": "Корпусы для рукавных фильтров",
 					"href": "#"
 				}
 			]
@@ -278,7 +278,7 @@
 					"href": "#"
 				},
 				{
-					"name": "Корпусы дял рукавных фильтров",
+					"name": "Корпусы для рукавных фильтров",
 					"href": "#"
 				}
 			]
