--- a/src/sass/block/aside.scss
+++ b/src/sass/block/aside.scss
@@ -3,7 +3,7 @@
     &__list{
         padding: 30px 30px 0px 48px;
         border: 1px solid $lightgrey;
-        max-width: 370px;
+        width: 370px;
         margin-bottom: 20px;
     }
     &__link{
