--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -29,7 +29,7 @@ block page
                 each item in catalog 
                     +catalog(item.name,item.img)
             .catalog-link        
-                a(href="").catalog__link Посмотреть всю продукцию
+                a(href="/products.html").catalog__link Посмотреть всю продукцию
     section.consult 
         .container
             .consult__wrapper 
@@ -49,7 +49,7 @@ block page
 
 block scripts 
      script(src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js")
-     script(src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU", type="text/javascript")
+     script(src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU")
 
                     
 
