--- a/data/vars.pug
+++ b/data/vars.pug
@@ -86,7 +86,8 @@
 	catalog = [
 		{
 			"name": "Рукавные фильтры",
-			"img": "1.png"
+			"img": "1.png",
+			"link": "handfilters.html"
 		},
 		{
 			"name": "Фильтр-картриджи",
@@ -155,7 +156,7 @@
 	menu1 = [
 		{
 			"title": "Рукавные фильтры",
-			"href": "#",
+			"href": "handfilters.html",
 			"subtitle": [
 				{
 					"name": "Однослойные",
@@ -229,7 +230,7 @@
 	aside = [
 		{
 			"title": "Рукавные фильтры",
-			"href": "#",
+			"href": "handfilters.html",
 			"subtitle": [
 				{
 					"name": "Однослойные",
