--- a/src/sass/block/bread.scss
+++ b/src/sass/block/bread.scss
@@ -1,9 +1,43 @@
 .bread{
-    &__name{
+    &__item{
+        
+        color: #B9B9B9;
+        &:last-child{
+            color: $black;
+        }
+       
+
+    }
+    &__link{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        &::after{
+            content: '';
+            display: block;
+            margin: 0 20px 0 20px;
+            height: 6px;
+            width: 3px;
+            background-image: url("../img/bread.svg");
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+        
         font-family: 'raleway';
         font-weight: 600;
         font-size: 20px;
         margin-top: 50px;
         margin-bottom: 30px;
+        list-style: none;
+        margin-bottom: 30px;
+        color: inherit;
     }
+    &__list{
+        list-style: none;
+        display: flex;
+        
+    }
+}
+.bread__item:last-child .bread__link::after{
+    content: none;
 }
