--- a/data/vars.pug
+++ b/data/vars.pug
@@ -106,6 +106,24 @@
 			"img": "5.png"
 		}
 	]
+	handfilters = [
+		{
+			"name": "Однослойные",
+			"img": "../handfilters/1.png",
+		},
+		{
+			"name": "Многослойные",
+			"img": "../handfilters/2.png",
+		},
+		{
+			"name": "С адсорбентом",
+			"img": "../handfilters/3.png",
+		},
+		{
+			"name": "Тонкая фильтрация",
+			"img": "../handfilters/4.png",
+		}
+	]
 
 	consult = [
 		{
@@ -308,4 +326,33 @@
 				}
 			]
 		}
+	]
+
+	text = [
+		
+			"Рукавный фильтр (фильтр-сумка) получил свое название из-за простой конструкции, по виду напоминающей глухой (зашитый) рукав или обычную узкую сумку. С английского языка Filter Bag буквально переводится как «фильтр-мешок».",
+			"В зависимости от материала фильтр-сумки относятся к поверхностным или глубинным фильтрам. Полиамид, полиэстер, нейлон, полипропилен используются для изготовления поверхностных фильтрующих сумок, войлок с волокнами различной длины и толщины – для глубинных. Поверхностные фильтры рекомендуется подбирать для фильтрации сред, в которых загрязняющие твердые примеси и частицы не деформируются под давлением, т.е. способны удерживаться на поверхности материала.  Деформируемые примеси, например вязкая слизь, пройдет через поверхностный слой, как через сито.",
+			"По количеству слоев материала фильтры IFAB представлены в виде однослойных и многослойных (3-4 слоя материла). В одной сумке могут совмещаться разные по назначению фильтрующие слои: предварительной и финишной фильтрации продукта, что позволяет экономить на корпусах и продлить срок службы фильтра.",
+			"Фильтр-сумки с жесткой вставкой внутри из микрофибры и полипропилена относятся к глубинным фильтрам тонкой фильтрации с функцией адсорбции масел, а в комплекте с магнитной вставкой задерживают намагничиваемые частицы и примеси.",
+			"Выбор рукавного фильтра зависит от температуры, вязкости, скорости потока, объема, типов загрязняющих частиц, совместимости материала фильтра с химическим составом фильтруемого продукта."
+			
+	]
+	examples =[
+		"фильтрация воды – перед установками обратного осмоса (10 – 100 мкм) для продления времени работоспособности мембран;",
+		"фильтрация вина и пива – контрольная фильтрация после кизельгурового фильтра или фильтр-пресса для исключения попадания частиц кизельгура или фильтр-картона в фильтрат (1 – 5 мкм), что предотвращает образование нежелательного осадка в танках хранения; контрольная фильтрация напитка перед розливом;",
+		"фильтрация сиропов, настоев, отваров, жидкостей с высокой вязкостью – удаление механических примесей, органических остатков; грубое, среднее и тонкое осветление (10 -50 мкм);",
+		"фильтрация водки – полицейский фильтр после угольных и кварцевых колонн, а также после фильтр-картона."
+	]
+	manufacture= [
+		"имеют широкий диапазон по микронному рейтингу 1-2000 мкм и абсолют-ный рейтинг фильтрации до 98 %;",
+		"могут применяться на разных стадиях фильтрации для грубой и тонкой очистки: предфильтр для защиты мембранного фильтра или финишный фильтр;",
+		"обеспечивают высокую скорость потока фильтруемого продукта;",
+		"обладают высокой грязеемкостью;",
+		"верхний предел рабочих температур в зависимости от материала cоставля-ет от 80 С до 160 С;",
+		"обработаны специальным образом, чтобы волокна не отделялись от мате-риала;",
+		"кольцо из нержавеющей стали входит в стандартную комплектацию, но мо-гут поставляться и с кольцом Quick-lock из полипропилена, полиэстера или полиамида для фильтрации без байпаса;",
+		"специальная конструкция пластиковых верхних прижимных колец исключа-ет протечки фильтруемой жидкости;",
+		"для фильтрации с рейтингом 1– 25 мкм производятся сумки с проплавлен-ным швом, что позволяет избежать протечек фильтруемой жидкости в отверстия от игл и нитей, используемых для стандартных сумок;",
+		"сертифицированы в соответствии с требованиями стандартов для пищевой и фармацевтической промышленности;",
+		"доступны во всех стандартных размерах и могут быть изготовлены по индивидуальному заказу."
 	]
