--- a/src/pug/chunk/mixins.pug
+++ b/src/pug/chunk/mixins.pug
@@ -91,7 +91,7 @@ mixin products(name,img,link)
         img(src="/img/catalog/"+img, alt=img).products-cell__img
         .products-cell__inner 
             p.products-cell__name= name 
-            a(href=limk).products-cell__link
+            a(href=link).products-cell__link
 
 mixin bread(name,href)
     li.bread__item 
