--- a/src/pug/products.pug
+++ b/src/pug/products.pug
@@ -14,7 +14,7 @@ block page
                 include chunk/aside
                 ul.products__list
                     each item in catalog
-                        +products(item.name,item.img,"#")   
+                        +products(item.name,item.img,item.link)   
 
                     
                       
